trying new textstroke size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2242,6 +2242,8 @@ input, select, textarea {
 
 				.main.style1 h2 {
 					font-size: 4em;
+					-webkit-text-stroke-width: .05em;
+					-webkit-text-stroke-color: white;
 				}
 
 			.main.style2 {
