--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1201,6 +1201,9 @@ input, select, textarea {
 
 	ul.icons {
 		cursor: default;
+		position: absolute;
+		bottom: 0;
+		left: 1em;
 	}
 
 		ul.icons li {
@@ -1229,7 +1232,7 @@ input, select, textarea {
 		}
 
 	footer {
-		margin-top: 2em;
+		margin-top: 7em;
 	}
 
 /* Table */
@@ -2211,9 +2214,9 @@ input, select, textarea {
 				background:  #ffffff;;
 			}
 
-			.main.style3.secondary {
+			/* .main.style3.secondary {
 				background: #f5f6f7;
-			}
+			} */
 
 
 		.main.dark {
@@ -2358,32 +2361,31 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-align-items: center;
-		-webkit-align-items: center;
-		-ms-align-items: center;
-		align-items: center;
-		-moz-justify-content: space-between;
-		-webkit-justify-content: space-between;
-		-ms-justify-content: space-between;
-		justify-content: space-between;
-		position: relative;
-		margin: 0;
-		line-height: 1em;
-		padding: 1em;
+		position: fixed;
+		z-index: 10000;
+		left: 0;
+		bottom: 0;
+		width: 100%;
 		background: black;
-		color: white;
-		overflow: hidden;
+		height: 3em;
+		line-height: 3em;
+		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
 	}
 
-	#footermain {
-		margin-top: 10em;
-	}
 		#footer > * {
 			margin-bottom: 0;
+		}
+
+		#footer article {
+			position: absolute;
+			right: 1em;
+			bottom: 0;
+			height: 3em;
+			line-height: 3em;
+		}
+
+		#footer ul {
+			display: inline-block;
 		}
 
 		#footer a {
@@ -2394,13 +2396,14 @@ input, select, textarea {
 				color: #b9babb;
 			}
 
-		#footer ul.menu {
+		/* #footer ul.menu {
 			margin: 0;
-		}
+		} */
 
 			#footer ul.menu li {
 				border-left-color: rgba(185, 186, 187, 0.2);
 				font-size: 0.9em;
+
 			}
 
 		@media screen and (max-width: 1000px) {
@@ -2454,20 +2457,37 @@ input, select, textarea {
 
 /* Featured */
 
-	#featured {
+#featured {
+	height: 35em;
+}
+
+#featuredVideo {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	min-width: 100%;
+	height: 100%;
+	z-index: 0;
+	background-color: black;
+}
+
+	/* #featured {
 		background: url("../../images/featured.jpg");
 		background-size: cover;
 		background-attachment: fixed;
 		background-position: center center;
-	}
+	} */
 
 /* Project Archive */
 
-	#projectArchive {
-		background:  url("../../images/portfolio-background.jpeg");
-		background-size: cover;
-		background-attachment: fixed;
-		background-position: center center;
+#project-archive-video {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -1;
 }
 
 		@media screen and (max-width: 736px) {
@@ -2489,33 +2509,30 @@ input, select, textarea {
 
 /* Services */
 
-	#services {
-		background: url("../../images/services-background.jpg");
-		background-size: cover;
-		background-attachment: fixed;
-		background-position: center;
-		background-repeat: no-repeat;
-	}
+#backgroundVideo {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	min-width: 100%;
+	min-height: 100%;
+	z-index: -1;
+}
 
-/* about */
-
-	#about {
-		background:  url("../../images/about-background.jpg");
-		background-size: cover;
-		background-attachment: fixed;
-		background-position: center center;
-	}
+.video-container {
+	position: relative;
+	overflow: hidden;
+}
 
 /* Contact */
 
-	#contact {
+	/* #contact {
 		overflow: hidden;
 		padding-bottom: 0;
 		background:  url("../../images/contact-background.jpeg");
 		background-size: cover;
 		background-attachment: fixed;
 		background-position: center center;
-	}
+	} */
 
 
 		#contact .box {
@@ -2632,11 +2649,11 @@ hr {
 
 /* featured section styling */
 
-video {
+/* video {
 	height: 20em;
 	width: 30em;
 	margin: 0% 2% 3% 2%;
-}
+} */
 
 @media screen and (max-width: 1170px) {
 	.featuredGallery {
