Updated V3 with requested additions--fixed footer, featured video full page w/mute button, backgrounds changed to requested videos, email updated

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2471,6 +2471,10 @@ input, select, textarea {
 	background-color: black;
 }
 
+/* #featuredAudioButton {
+
+} */
+
 	/* #featured {
 		background: url("../../images/featured.jpg");
 		background-size: cover;
