Added white network background to past archive page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2504,12 +2504,16 @@ input, select, textarea {
 		}
 
 /* Added to create separate page for past Archive */
-		#pastArchive {
+		/* #pastArchive {
 			background:  url("../../images/past-archive.jpg");
 			background-size: cover;
 			background-attachment: fixed;
 			background-position: center center;
-		}
+		} */
+
+#pastArchive {
+	padding-top: 2em;
+}
 
 /* Services */
 
