--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1931,8 +1931,8 @@ input, select, textarea {
 		top: 0;
 		width: 100%;
 		background: black;
-		height: 3em;
-		line-height: 3em;
+		height: 2em;
+		line-height: 2em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
 	}
 
@@ -1945,8 +1945,8 @@ input, select, textarea {
 			position: absolute;
 			left: 1em;
 			top: 0;
-			height: 3em;
-			line-height: 3em;
+			height: 2em;
+			line-height: 2em;
 			cursor: default;
 		}
 
@@ -1958,8 +1958,8 @@ input, select, textarea {
 			position: absolute;
 			right: 0.5em;
 			top: 0;
-			height: 3em;
-			line-height: 3em;
+			height: 2em;
+			line-height: 2em;
 		}
 
 			#header nav ul {
@@ -1976,8 +1976,8 @@ input, select, textarea {
 						display: block;
 						color: inherit;
 						text-decoration: none;
-						height: 3em;
-						line-height: 3em;
+						height: 2em;
+						line-height: 2em;
 						padding: 0 0.25em 0 0.25em;
 						outline: 0;
 					}
@@ -2367,8 +2367,8 @@ input, select, textarea {
 		bottom: 0;
 		width: 100%;
 		background: black;
-		height: 3em;
-		line-height: 3em;
+		height: 2em;
+		line-height: 2em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
 	}
 
@@ -2380,8 +2380,8 @@ input, select, textarea {
 			position: absolute;
 			right: 1em;
 			bottom: 0;
-			height: 3em;
-			line-height: 3em;
+			height: 2em;
+			line-height: 2em;
 		}
 
 		#footer ul {
@@ -2447,13 +2447,13 @@ input, select, textarea {
 
 /* Intro */
 
-	#intro {
+	/* #intro {
 		background: url("../../images/intro.jpeg");
 		background-size: cover;
 		background-attachment: fixed;
 		background-position: center;
 		background-repeat: no-repeat;
-	}
+	} */
 
 /* Featured */
 
@@ -2698,3 +2698,19 @@ hr {
 }
 
 
+.video-background {
+	position: relative;
+	overflow: hidden;
+	width: 100vw;
+	height: 100vh;
+}
+
+.video-background iframe {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100vw;
+	height: 100vh;
+	transform: translate(-50%, -50%);
+	z-index: 0;
+}
