Added jQuery scroll event to trigger change of fixed background image to dark in order to cover long sections without image stretch, added button.anchored.circle to make anchored section buttons rounded since sections aren't identifiable with fixed backgrounds

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -731,6 +731,14 @@ input, select, textarea {
 				margin-left: -1.25em;
 			}
 
+			input[type="button"].down.anchored.circle,
+			input[type="submit"].down.anchored.circle,
+			input[type="reset"].down.anchored.circle,
+			.button.down.anchored.circle,
+			button.down.anchored.circle {
+				border-radius: 3.5em;
+			} 
+
 		input[type="button"].anchored,
 		input[type="submit"].anchored,
 		input[type="reset"].anchored,
@@ -2532,6 +2540,8 @@ input, select, textarea {
 	min-width: 100%;
 	min-height: 100%;
 	z-index: -1;
+	background-size: contain;
+	overflow: auto;
 }
 
 .video-container {
